--- a/app/views/_logo.html.erb
+++ b/app/views/_logo.html.erb
@@ -1,5 +1,5 @@
 <%# overrides https://github.com/projecthydra/sufia/blob/v7.3.0/app/views/_logo.html.erb %>
-<a id="logo" class="navbar-brand" href="<%= sufia.root_path %>" data-no-turbolink="true">
+<a id="logo" class="navbar-brand" href="https://www.sciencehistory.org" data-no-turbolink="true">
   <% unless false && CHF::Env.staging? %> <%# temporarily show logo even on staging %>
     <%= image_tag "logo_top_right_quad-white85-81.png", class: "small-masthead-only masthead-logo-small", alt: "Science History Institute" %>
     <%= image_tag "scihist_logo_white_on_transparent.png", class: "large-masthead-only masthead-logo-large", alt: "Science History Institute" %>
