only name in footer not logo

--- a/app/assets/stylesheets/local/navbar.scss
+++ b/app/assets/stylesheets/local/navbar.scss
@@ -49,7 +49,7 @@
     font-weight: 300;
   }
 
-  .masthead-title {
+  .masthead-title, .footer-title {
     font-family: $brand-serif;
     font-size: 30px;
     margin: 0;
