--- a/app/assets/stylesheets/local/footer.scss
+++ b/app/assets/stylesheets/local/footer.scss
@@ -1,7 +1,7 @@
 // This weird absolute positioning calculated body margin comes from sufia, not sure why it's needed,
 // but I couldn't avoid bottom white space under footer without it.
-$footer-height: 470px;
-$footer-height-xs: 750px;
+$footer-height: 328px;
+$footer-height-xs: 600px;
 $footer-top-margin: 0;
 
 body {
@@ -22,6 +22,21 @@ body {
   bottom: 0;
   height: $footer-height;
   width: 100%;
+
+  .footer-title {
+    font-family: $brand-serif;
+    font-size: 22px;
+    margin: 0 0 20px 0;
+    padding: 0;
+    line-height: normal;
+    &>a {
+      color: white;
+      &:hover, &:active, &:focus {
+        color: $brand-bright-green;
+        text-decoration: none;
+      }
+    }
+  }
 
   .footerrow {
     text-align: center;
