--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,9 +1,7 @@
 <footer id="footer" role="contentinfo">
 
   <div class="footerrow">
-    <%= link_to "https://www.sciencehistory.org" do %>
-      <%= image_tag "scihist_logo_white_on_transparent.png", alt: "Science History Institute" %>
-    <% end %>
+    <h1 class="footer-title"> <%= link_to "Science History Institute", "https://www.sciencehistory.org" %> </h1>
   </div>
 
   <div class="footerrow">
