--- a/app/assets/stylesheets/local/_mixins.scss
+++ b/app/assets/stylesheets/local/_mixins.scss
@@ -34,7 +34,7 @@
   font-family: $brand-serif;
   // 16px in abril is really small, 17px looks more like 16px in other fonts.
   font-size: 17px;
-  line-height: normal;
+  line-height: $paragraph-line-height;
 }
 
 // Try to make our date field that has mostly numbers legible with abril
