--- a/app/assets/stylesheets/local/results.scss
+++ b/app/assets/stylesheets/local/results.scss
@@ -100,6 +100,10 @@
         border-color: #ddd;
       }
     }
+    .facet-values li {
+      line-height: 1.2;
+    }
+
     .facet-values li .selected {
       color: $brand-dark-blue;
     }
