--- a/app/assets/stylesheets/local/work-show.scss
+++ b/app/assets/stylesheets/local/work-show.scss
@@ -117,7 +117,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding: 15px 0;
+    padding: ($paragraph-line-height / 2) 0;
 
 
     .rights-statement.large, .social-media {
