--- a/app/assets/stylesheets/local/work-show.scss
+++ b/app/assets/stylesheets/local/work-show.scss
@@ -100,7 +100,7 @@
       margin-top: 0;
     }
     li {
-      margin-top: $line-height-computed / 2;
+      margin-top: $paragraph-spacer / 2;
     }
   }
 
