more consistent text width

--- a/app/assets/stylesheets/local/site-wide.scss
+++ b/app/assets/stylesheets/local/site-wide.scss
@@ -140,11 +140,11 @@ hr.brand {
 }
 
 .text-page {
-  max-width: $long-max-readable-width;
+  max-width: $max-readable-width;
   margin-right: auto;
   margin-left: auto;
   p {
-    max-width: $long-max-readable-width;
+    max-width: $max-readable-width;
   }
 }
 
