--- a/app/assets/stylesheets/local/__variables.scss
+++ b/app/assets/stylesheets/local/__variables.scss
@@ -35,7 +35,7 @@ $semi-bold-weight: 600;
 
 // Maximum line length we judge to be readable at standard base font size.
 // Used to constrain some block text areas on large screens.
-$max-readable-width: 64ch;
+$max-readable-width: 643px; // ~ 64ch
 $long-max-readable-width: 720px; // unclear how readable it really is, but we do it sometimes anyway
 
 
