--- a/app/assets/stylesheets/local/collection-show.scss
+++ b/app/assets/stylesheets/local/collection-show.scss
@@ -79,8 +79,9 @@
     display: inline-block;
 
     .chf-collection-search-title {
-      @extend .h4, .brand-alt-h4;
+      font-size: $font-size-h4;
       margin: 0;
+      font-weight: 600;
     }
 
     .input-group {
