panel border radius 0

--- a/app/assets/stylesheets/local/__variables.scss
+++ b/app/assets/stylesheets/local/__variables.scss
@@ -85,6 +85,8 @@ $input-group-addon-bg: $bg-lightly-shaded;
 
 $input-color: $brand-dark-grey;
 
+$panel-border-radius: 0;
+
 // border radius matching some elements on chemheritage.org, larger than bootstrap default
 $btn-border-radius-base:        9px !default;
 $btn-border-radius-large:       9px !default;
