--- a/app/assets/stylesheets/local/navbar.scss
+++ b/app/assets/stylesheets/local/navbar.scss
@@ -111,6 +111,11 @@
 .breadcrumbs-navbar-wrapper {
   margin-top: -1 * $navbar-margin-bottom;
   margin-bottom: $navbar-margin-bottom;
+
+  @media (min-width: $grid-float-breakpoint) {
+    padding-left: 28px; // try to line up with logo
+  }
+
   ul.breadcrumb {
     margin-bottom: 0;
     background: none;
