--- a/app/views/static/faq.html.erb
+++ b/app/views/static/faq.html.erb
@@ -12,7 +12,7 @@
     <dd>Possession of a digital reproduction of the Science History Institute's collection materials does not constitute permission to publish, exhibit, or distribute. In most instances the Institute does not hold the copyright to its materials and cannot grant or deny permission to use them. Science History Institute staff makes every effort to inform patrons of copyrights and other restrictions that may apply to the works by providing a link to <a href="http://rightsstatements.org/en/" target="_blank">RightsStatements.org</a> or Creative Commons in the Rights field in the object’s metadata record. Additional information about the Rights Statement is provided by clicking on the link in the Rights field in an object’s metadata record. If you have a question not answered by the information provided with the image, feel free to e-mail us at <a href="mailto:digital@sciencehistory.org">digital@sciencehistory.org</a>.</dd>
 
     <dt>How do I cite an image?</dt>
-    <dd>Please use “Courtesy of Science History Institute Collections” in your credit line. When possible, we ask that you also include the title of the image or name of the collection.</dd>
+    <dd>Please use “Courtesy of Science History Institute” in your credit line. When possible, we ask that you also include the title of the image or name of the collection.</dd>
 
     <dt>The item I want isn’t in the Digital Collections. How do I request a new reproduction? How long will it take to process?</dt>
     <dd>More information about our Digital Reproduction Services can be found <a href="https://www.sciencehistory.org/rights-and-reproductions">here</a>.</dd>
