try blue button for image action

--- a/app/views/curation_concerns/base/_show_page_image.html.erb
+++ b/app/views/curation_concerns/base/_show_page_image.html.erb
@@ -38,7 +38,7 @@
         and in our app if you can see it you can download %>
     <% if local_assigns[:size].to_s == "large" || member.model_name.singular.to_sym == :file_set %>
       <div class="btn-group dropup">
-        <button type="button" class="btn btn-emphasis dropdown-toggle" id="dropdownMenu_downloads_<%= member.id %>" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <button type="button" class="btn btn-primary dropdown-toggle" id="dropdownMenu_downloads_<%= member.id %>" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <%# less space for admin, just use icon %>
           <i class='fa fa-download'></i> Download
         </button>
@@ -48,7 +48,7 @@
 
     <% if local_assigns[:size].to_s == "large" %>
       <div class="btn-group">
-        <%= content_tag("button", type: "button", class: "btn btn-emphasis dropdown-toggle", data: viewer_trigger_data_attributes(parent_id: @presenter.id, member: member)) do %>
+        <%= content_tag("button", type: "button", class: "btn btn-primary dropdown-toggle", data: viewer_trigger_data_attributes(parent_id: @presenter.id, member: member)) do %>
           <i class='fa fa-search'></i> View
         <% end %>
       </div>
@@ -56,13 +56,13 @@
 
     <% if (member.model_name.singular.to_sym == :file_set) && current_ability.current_user.staff? %>
       <div class="btn-group dropup">
-        <button class="btn btn-emphasis dropdown-toggle" data-toggle="dropdown" type="button" id="dropdownMenu_actions_<%= member.id %>" aria-haspopup="true">
+        <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown" type="button" id="dropdownMenu_actions_<%= member.id %>" aria-haspopup="true">
           <i class='fa fa-cog'></i>  Admin
         </button>
         <%= file_set_actions_menu(member, parent: @presenter, labelled_by: "dropdownMenu_actions_#{member.id}") %>
       </div>
     <% elsif member.model_name.singular.to_sym != :file_set %>
-      <%= link_to  contextual_path(member, @presenter), class: "btn btn-emphasis show-page-image-info" do %>
+      <%= link_to  contextual_path(member, @presenter), class: "btn btn-primary show-page-image-info" do %>
          Info
       <% end %>
     <% end %>
