--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -1,7 +1,7 @@
 <div class="branded-body-font text-page">
   <h1 class="brand-alt-h1">About</h1>
 
-  <p>The Science History Instistute’s Digital Collections offer highlights from our library, archives, and museum collections. Our chronology ranges from the Roman Empire to the 21st century, and the materials include everything from fine art to rare books and from scientific objects to photographs.</p>
+  <p>The Science History Institute's Digital Collections offer highlights from our library, archives, and museum collections. Our chronology ranges from the Roman Empire to the 21st century, and the materials include everything from fine art to rare books and from scientific objects to photographs.</p>
 
   <p>The purpose of our Digital Collections is to manage, preserve, and provide access to our digital assets all in one location. Although the Digital Collections include only a small portion of our entire collection, new material is added every day. See the Institute's <a href="https://wwww.sciencehistory.org/collections">Collections page</a> for more information about our library, archives, and museum.</p>
 
