rights statement adjust alignment

--- a/app/assets/stylesheets/local/work-show.scss
+++ b/app/assets/stylesheets/local/work-show.scss
@@ -140,16 +140,16 @@
     @include clearfix;
 
     .rights-statement-logo {
-      width: 35px;
-      height: 35px;
+      width: 36px;
+      height: 36px;
       float: left;
       margin-right: 0.5em;
       margin-top: 4px;
     }
     .rights-statement-label {
       display: inline-block;
-      font-size: 18px;
-      line-height: 1.2;
+      font-size: 19px;
+      line-height: 22px;
       text-transform: uppercase;
       letter-spacing: $small-caps-letter-spacing;
       font-weight: $semi-bold-weight;
