try to make menu more readable

--- a/app/assets/stylesheets/local/__variables.scss
+++ b/app/assets/stylesheets/local/__variables.scss
@@ -64,6 +64,7 @@ $link-hover-color: $brand-dark-blue;
 $font-family-sans-serif: $brand-sans-serif, "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 $text-muted: $brand-dark-grey;
+$dropdown-header-color: $brand-dark-grey;
 
 // our serif abril font is awfully small, better at 17px, but we're gonna leave
 // font size base 16 for sans-serif controls, but set line-height-base
