--- a/app/assets/stylesheets/local/__variables.scss
+++ b/app/assets/stylesheets/local/__variables.scss
@@ -15,8 +15,11 @@ $brand-blue: #4bb0c7; // zack instructed us to use this slightly darker shade
 $brand-light-grey: #bcbcbc; // not actually very light
 $brand-dark-grey: #646469;
 
-$brand-sans-serif: 'adelle-sans';
-$brand-serif: 'abril-text';
+$brand-sans-serif: 'adelle-sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
+// fallbacks are useful for weird diacritics that may not be in our main font,
+// especially the weird russian transliteraton stuff seems to be problematic.
+// Times New Roman seems to have them, at least on MacOS.
+$brand-serif: 'abril-text', "Times New Roman", Times, serif;
 
 $brand-blue-text: #338EA2; // brand blue is too light for text on white, here's a darker version 3595AA.
 //$bg-lightly-shaded: #f9f9f9; // does not match brand, no suitable color in brand
@@ -28,7 +31,7 @@ $special-label-muted-color: $brand-dark-grey;
 $small-caps-letter-spacing: 0.035em;
 
 $brand-btn-alt-bg: $brand-bright-green;
-$brand-alt-header-font: $brand-sans-serif, sans-serif;
+$brand-alt-header-font: $brand-sans-serif;
 $brand-alt-header-weight: 700;
 
 // adelle-sans has a 600 semi-bold available. 700 is standard bold. 500 seems to be the same as 400=normal.
