reduce collections index line-height to try and fit three lines in allotted space

--- a/app/assets/stylesheets/local/collections.scss
+++ b/app/assets/stylesheets/local/collections.scss
@@ -41,6 +41,7 @@ $collection-index-box-margin: 17px;
 
         .collection-title {
           text-align: center;
+          line-height: 1.3; // try to fit three lines in space we have
         }
       }
 
