proper font for collection index

--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -1,5 +1,5 @@
 <div class="collections-index">
-  <h1 class="collections-index-title">All Collections</h1>
+  <h1 class="collections-index-title brand-alt-h1">All Collections</h1>
 
   <div class="collections-index-list">
     <%= render partial: "collection_teaser", collection: @presenters, as: :presenter %>
