Revert "collection index, try green bg, with blue hover"
This reverts commit cbce455276a4452fee52e40272a5f5300886fe00.

--- a/app/assets/stylesheets/local/collections.scss
+++ b/app/assets/stylesheets/local/collections.scss
@@ -27,13 +27,7 @@ $collection-index-box-margin: 17px;
       height: $collection-index-box-height;
       margin: $collection-index-box-margin;
 
-      &:hover, a:focus, a:active {
-        .collection-title-wrapper {
-          background-color: $brand-primary;
-          color: white;
-        }
-      }
-
+      @include all-white-links;
 
       .collection-title-wrapper {
         /* overlay on image */
@@ -42,8 +36,7 @@ $collection-index-box-margin: 17px;
         left: 0;
         width: 100%;
         height: 75px;
-        background-color: $brand-bright-green;
-        color: black;
+        background-color: $brand-inverse;
         padding: 10px;
 
         .collection-title {
