better small logo, butted up against top left, via clare

--- a/app/assets/stylesheets/local/chf_image_viewer.scss
+++ b/app/assets/stylesheets/local/chf_image_viewer.scss
@@ -89,6 +89,8 @@ $chf_image_viewer_thumb_width: 54px; // Needs to match ImageServiceHelper::THUMB
 
     .chf-logo {
       width: 40px;
+      position: relative;
+      top: -4px;
     }
 
     h1 {
