--- a/app/views/_logo.html.erb
+++ b/app/views/_logo.html.erb
@@ -2,7 +2,7 @@
 <a id="logo" class="navbar-brand" href="https://www.sciencehistory.org" data-no-turbolink="true">
   <% unless false && CHF::Env.staging? %> <%# temporarily show logo even on staging %>
     <%= image_tag "partial-mark-75rotate-80.png", class: "small-masthead-only masthead-logo-small", alt: "Science History Institute" %>
-    <%= image_tag "scihist_logo_white_on_transparent.png", class: "large-masthead-only masthead-logo-large", alt: "Science History Institute" %>
+    <%= image_tag "sci_logo-webheader_2x.png", class: "large-masthead-only masthead-logo-large", alt: "Science History Institute" %>
   <% else %>
     NON-PRODUCTION DEMO
   <% end %>
