--- a/app/assets/stylesheets/local/work-show.scss
+++ b/app/assets/stylesheets/local/work-show.scss
@@ -7,6 +7,9 @@
   .show-admin {
     text-align: right;
     margin-bottom: $line-height-computed;
+    .show-actions {
+      padding: 0;
+    }
   }
 
 
