export citation (RIS) button on work show page

--- a/app/assets/stylesheets/local/work-show.scss
+++ b/app/assets/stylesheets/local/work-show.scss
@@ -116,6 +116,10 @@
     margin-top: $paragraph-spacer;
   }
 
+  .show-user-actions {
+    margin-bottom: $paragraph-spacer;
+  }
+
   .rights-and-social {
     display: flex;
     flex-wrap: wrap;
