--- a/app/views/curation_concerns/base/show.html.erb
+++ b/app/views/curation_concerns/base/show.html.erb
@@ -81,9 +81,23 @@
     <%= render 'work_description', presenter: @presenter %>
 
     <div class="show-user-actions">
-      <%= link_to main_app.curation_concerns_generic_work_path(@presenter.id, format: "ris"), class: "btn btn-sm btn-brand-dark" do %>
-        <i class="fa fa-address-card"></i> Export Citation (RIS)
-      <% end %>
+      <div class="btn-group" role="group">
+        <%= link_to main_app.curation_concerns_generic_work_path(@presenter.id, format: "ris"), class: "btn btn-sm btn-brand-dark export-citation" do %>
+          <i class="fa fa-address-card"></i> Export Citation (RIS)
+        <% end %>
+        <a class="btn btn-default btn-sm" tabindex="0" role="button" data-toggle="popover" data-placement="bottom"
+           data-container="body"
+           data-html="true"
+           data-trigger="focus"
+           data-template='<div class="popover popover-citation-help" role="tooltip"><div class="arrow"></div><div class="popover-content"></div></div>'
+           data-content="The RIS format can be imported into most reference management software, including
+            <a target='_blank' href='https://www.zotero.org/'>Zotero</a>,
+            <a target='_blank' href='https://www.mendeley.com/reference-management/reference-manager'>Mendeley</a>,
+            <a target='_blank' href='http://endnote.com/'>EndNote</a>,
+            and <a href='https://www.refworks.com'>Refworks</a>.">
+          <b>?</b>
+        </a>
+      </div>
     </div>
 
     <table class="<%= dom_class(@presenter) %> chf-attributes">
