--- a/app/assets/stylesheets/local/__variables.scss
+++ b/app/assets/stylesheets/local/__variables.scss
@@ -64,6 +64,7 @@ $brand-danger: $brand-red;
 $brand-warning: $brand-yellow;
 $brand-inverse: $brand-dark-blue;
 $brand-primary: $brand-blue;
+$btn-primary-border: $brand-primary; // no border
 $link-color: $brand-blue-text;
 $link-hover-color: $brand-dark-blue;
 $font-family-sans-serif: $brand-sans-serif, "Helvetica Neue", Helvetica, Arial, sans-serif;
