btn-default-border brand color

--- a/app/assets/stylesheets/local/__variables.scss
+++ b/app/assets/stylesheets/local/__variables.scss
@@ -67,6 +67,7 @@ $brand-primary: $brand-blue;
 $btn-primary-border: $brand-primary; // no border
 $link-color: $brand-blue-text;
 $link-hover-color: $brand-dark-blue;
+$btn-default-border: $brand-light-grey;
 $font-family-sans-serif: $brand-sans-serif, "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 $text-muted: $brand-dark-grey;
