list-group-border from brand colors to match

--- a/app/assets/stylesheets/local/__variables.scss
+++ b/app/assets/stylesheets/local/__variables.scss
@@ -91,6 +91,8 @@ $panel-default-border: #ccc; // goes with brand light grey. ish.
 $breadcrumb-bg: $bg-lightly-shaded;
 $input-group-addon-bg: $bg-lightly-shaded;
 
+$list-group-border: $brand-light-grey;
+
 $input-color: $brand-dark-grey;
 
 $panel-border-radius: 0;
