--- a/app/assets/stylesheets/local/__variables.scss
+++ b/app/assets/stylesheets/local/__variables.scss
@@ -88,13 +88,14 @@ $navbar-default-bg: $bg-lightly-shaded;
 $panel-default-heading-bg: $bg-lightly-shaded;
 $panel-footer-bg: $bg-lightly-shaded;
 $panel-default-border: #ccc; // goes with brand light grey. ish.
+
 $breadcrumb-bg: $bg-lightly-shaded;
 $input-group-addon-bg: $bg-lightly-shaded;
 
 $list-group-border: $brand-light-grey;
 
 $input-color: $brand-dark-grey;
-
+$input-border: $brand-light-grey;
 $panel-border-radius: 0;
 
 // border radius matching some elements on chemheritage.org, larger than bootstrap default
