fix typo method name

--- a/app/views/application/robots.txt.erb
+++ b/app/views/application/robots.txt.erb
@@ -7,7 +7,7 @@ User-agent: *
 Disallow:
 Crawl-delay: 5
 
-Sitemap: https://s3.amazonaws.com/<%= CHF::Env.fetch("sitemap_s3_bucket") %>/sitemap/sitemap.xml.gz
+Sitemap: https://s3.amazonaws.com/<%= CHF::Env.lookup("sitemap_s3_bucket") %>/sitemap/sitemap.xml.gz
 
 <% else %>
 # non-production robots.txt
