fixup! export citation (RIS) button on work show page

--- a/app/views/curation_concerns/base/show.html.erb
+++ b/app/views/curation_concerns/base/show.html.erb
@@ -83,7 +83,7 @@
     <div class="show-user-actions">
       <div class="btn-group" role="group">
         <%= link_to main_app.curation_concerns_generic_work_path(@presenter.id, format: "ris"), class: "btn btn-sm btn-brand-dark export-citation" do %>
-          <i class="fa fa-address-card"></i> Export Citation (RIS)
+          <i class="fa fa-address-card"></i> Export citation (RIS)
         <% end %>
         <a class="btn btn-default btn-sm" tabindex="0" role="button" data-toggle="popover" data-placement="bottom"
            data-container="body"
