add facets to collections show page

--- a/app/assets/stylesheets/local/collection-show.scss
+++ b/app/assets/stylesheets/local/collection-show.scss
@@ -28,6 +28,10 @@
     }
   }
 
+  #sidebar {
+    padding-left: 0 !important;
+  }
+
   .actions-controls-collections {
     margin: 0 0 $line-height-computed 0;
   }
