--- a/app/views/collections/show.html.erb
+++ b/app/views/collections/show.html.erb
@@ -9,7 +9,7 @@ The underlying code in stack is a mess, so this override seems perhaps likely to
 %>
 
 <% provide :page_title, construct_page_title(@presenter.title) %>
-<%# we're going to provide constraints ourselves below #>
+<%# we're going to provide constraints ourselves below %>
 <% provide :suppress_layout_constraints, true %>
 
 <div itemscope itemtype="http://schema.org/CollectionPage" class="collection-show">
@@ -67,6 +67,10 @@ The underlying code in stack is a mess, so this override seems perhaps likely to
     <div class="chf-collection-search-form"><%= render 'search_form', presenter: @presenter %></div>
   </div>
 
+  <div class="chf-constraints-wrapper">
+    <%= render 'catalog/constraints' %>
+  </div>
+
   <%# built in sufia collections/sort_and_per_page overrides to some years old Blacklight. We want
     the normal one we're actually using. %>
   <%# render 'sort_and_per_page', collection: @presenter %>
@@ -102,10 +106,6 @@ The underlying code in stack is a mess, so this override seems perhaps likely to
         to use the catalog view_type_group partial instead of the overridden sufia one which doesn't have
         the same classes
     %>
-    <div class="chf-constraints-wrapper">
-      <%= render 'catalog/constraints' %>
-    </div>
-
     <% if @member_docs.count != 1 %>
       <%= render 'catalog/search_header' %>
     <% end %>
