collection-show page takes up more space to accomodate facets
and make re-used constraints stuff flush left

--- a/app/assets/stylesheets/local/collection-show.scss
+++ b/app/assets/stylesheets/local/collection-show.scss
@@ -3,7 +3,6 @@
 
 .collection-show {
   padding: 0 15px;
-  max-width: $screen-md-min - 1;
   margin-left: auto;
   margin-right: auto;
 
@@ -28,7 +27,8 @@
     }
   }
 
-  #sidebar {
+  // sad overrides to make things flush left properly when re-used on this page.
+  #sidebar, #appliedParams.constraints-container, .chf-constraints-wrapper {
     padding-left: 0 !important;
   }
 
