--- a/app/views/collections/_search_form.html.erb
+++ b/app/views/collections/_search_form.html.erb
@@ -10,7 +10,7 @@
   <div class="input-group">
     <%= text_field_tag :cq, "", class: "collection-query form-control", placeholder: t('curation_concerns.collections.search_form.placeholder'), size: '30', type: "search", id: "collection_search" %>
     <div class="input-group-btn">
-      <button type="submit" class="btn btn-primary" id="collection_submit"><i class="glyphicon glyphicon-search"></i> Go</button>
+      <button type="submit" class="btn btn-primary collection-submit" id="collection_submit"><i class="glyphicon glyphicon-search"></i> Go</button>
     </div>
   </div>
   <%= hidden_field_tag :sort, params[:sort], id: 'collection_sort' %>
